--- a/kilim/pom.xml
+++ b/kilim/pom.xml
@@ -1,14 +1,14 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.nqzero</groupId>
-    <artifactId>demo-xorshift</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>kilim</groupId>
+    <artifactId>xorshift-multi</artifactId>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
             <groupId>org.db4j</groupId>
             <artifactId>kilim</artifactId>
-            <version>2.0.0-21-jdk11</version>
+            <version>2.0.1</version>
         </dependency>
     </dependencies>
     <build>
